# DigitalRFWSPR

./: LICENSE  README.md  WSPR_Encode.py
Digital_RF/: Binary_To_DigitalRF.py  README.md
Digital_RF/gr-Passthrough_DigitalRF_Writer/: CMakeLists.txt
Digital_RF/gr-Passthrough_DigitalRF_Writer/apps/: CMakeLists.txt
Digital_RF/gr-Passthrough_DigitalRF_Writer/cmake/Modules/: gnuradio-Passthrough_DigitalRF_WriterConfig.cmake
Digital_RF/gr-Passthrough_DigitalRF_Writer/docs/: CMakeLists.txt  README.Passthrough_DigitalRF_Writer
Digital_RF/gr-Passthrough_DigitalRF_Writer/docs/doxygen/other/: group_defs.dox
Digital_RF/gr-Passthrough_DigitalRF_Writer/examples/: CMakeLists.txt
Digital_RF/gr-Passthrough_DigitalRF_Writer/python/Passthrough_DigitalRF_Writer/: qa_Passthrough_DigitalRF_Writer.py
Digital_RF/gr-Passthrough_DigitalRF_Writer/python/Passthrough_DigitalRF_Writer/bindings/: python_bindings.cc
TestSample/: drf_properties.h5
TestSample/metadata/: dmd_properties.h5
TestSample/metadata/1970-01-01T00-00-00/: metadata@0.h5
gr-Passthrough_DigitalRF_Writer/: MANIFEST.yml
gr-Passthrough_DigitalRF_Writer/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-Passthrough_DigitalRF_Writer/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-Passthrough_DigitalRF_Writer/docs/doxygen/other/: main_page.dox
gr-Passthrough_DigitalRF_Writer/grc/: CMakeLists.txt  Passthrough_DigitalRF_Writer_Passthrough_DigitalRF_Writer.block.yml
gr-Passthrough_DigitalRF_Writer/include/gnuradio/Passthrough_DigitalRF_Writer/: CMakeLists.txt  api.h
gr-Passthrough_DigitalRF_Writer/lib/: CMakeLists.txt
gr-Passthrough_DigitalRF_Writer/python/Passthrough_DigitalRF_Writer/: CMakeLists.txt  Passthrough_DigitalRF_Writer.py  __init__.py
gr-Passthrough_DigitalRF_Writer/python/Passthrough_DigitalRF_Writer/bindings/: CMakeLists.txt
gr-WSPR_Encoder/: CMakeLists.txt  MANIFEST.yml
gr-WSPR_Encoder/apps/: CMakeLists.txt
gr-WSPR_Encoder/cmake/Modules/: gnuradio-WSPR_EncoderConfig.cmake
gr-WSPR_Encoder/docs/: CMakeLists.txt  README.WSPR_Encoder
gr-WSPR_Encoder/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-WSPR_Encoder/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-WSPR_Encoder/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-WSPR_Encoder/examples/: CMakeLists.txt
gr-WSPR_Encoder/grc/: CMakeLists.txt  WSPR_Encoder_WSPR_Encoding_Block.block.yml
gr-WSPR_Encoder/include/gnuradio/WSPR_Encoder/: CMakeLists.txt  api.h
gr-WSPR_Encoder/lib/: CMakeLists.txt
gr-WSPR_Encoder/python/WSPR_Encoder/: CMakeLists.txt  WSPR_Encoding_Block.py  __init__.py
gr-WSPR_Encoder/python/WSPR_Encoder/bindings/: CMakeLists.txt  python_bindings.cc
gr-WSPR_WAV_Sink/: CMakeLists.txt  MANIFEST.yml
gr-WSPR_WAV_Sink/apps/: CMakeLists.txt
gr-WSPR_WAV_Sink/cmake/Modules/: gnuradio-WSPR_WAV_SinkConfig.cmake
gr-WSPR_WAV_Sink/docs/: CMakeLists.txt  README.WSPR_WAV_Sink
gr-WSPR_WAV_Sink/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-WSPR_WAV_Sink/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-WSPR_WAV_Sink/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-WSPR_WAV_Sink/examples/: CMakeLists.txt
gr-WSPR_WAV_Sink/grc/: CMakeLists.txt  WSPR_WAV_Sink_WSPR_WAV_Sink.block.yml
gr-WSPR_WAV_Sink/include/gnuradio/WSPR_WAV_Sink/: CMakeLists.txt  api.h
gr-WSPR_WAV_Sink/lib/: CMakeLists.txt
gr-WSPR_WAV_Sink/python/WSPR_WAV_Sink/: CMakeLists.txt  WSPR_WAV_Sink.py  __init__.py
gr-WSPR_WAV_Sink/python/WSPR_WAV_Sink/bindings/: CMakeLists.txt  python_bindings.cc
testingSamples/: placeholder
testingSamples/chD_spectrogram/: dmd_properties.h5
testingSamples/chD_spectrogram/2026-07-10T17-00-00/: spectrogram@1783705202.h5  spectrogram@1783705442.h5
wsprdDigital_RF/: ALL_WSPR.TXT  Makefile  README  ddc_perm.py  ddc_temp.py  digitalRFWSPRD  digitalRFWSPRD.c  digitalRFWSPRDecoder.py  downconverttest.py  drf_properties.h5  hashtable.txt  multiStageDDC.py  wspr_spots.txt  wspr_timer.out  wsprsim
wsprdDigital_RF/chD_spectrogram/2026-07-10T17-00-00/: spectrogram@1783705262.h5  spectrogram@1783705322.h5  spectrogram@1783705382.h5
wsprdDigital_RF/metadata/: dmd_properties.h5
wsprdDigital_RF/metadata/2026-07-10T17-00-00/: metadata@1783705202.h5
wsprdDigital_RF/wsprdDigital_RF/: digitalRFWSPRDecoder.py  wspr_spots.txt  wspr_timer.out  wsprsim
